--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "axios": "1.7.9",
         "dayjs": "1.11.13",
         "element-plus": "2.9.0",
+        "gsap": "^3.12.7",
         "js-cookie": "3.0.5",
         "lodash-es": "4.17.21",
         "mitt": "3.0.1",
@@ -21,6 +22,7 @@
         "path-to-regexp": "8.2.0",
         "pinia": "2.3.0",
         "screenfull": "6.0.2",
+        "velocity-animate": "^1.5.2",
         "vue": "3.5.13",
         "vue-router": "4.5.0",
         "vxe-table": "4.6.25"
